[package]
name = "juggler-in-rust"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
strip = true        # Automatically strip symbols from the binary
opt-level = "z"     # Optimize for size
lto = true          # Let linker remove unused code and data
# TODO: Slows down compilation too much
#codegen-units = 1   # Sequential compilation, (maybe) better optimization
panic = "abort"     # Bare-bones crash reporting

[dependencies]
softbuffer = { version = "0.4.1", default-features = false, features = ["x11", "x11-dlopen", "wayland", "wayland-dlopen"] }
winit = { version = "0.29.10", default-features = false, features = ["rwh_06", "x11", "wayland", "wayland-dlopen"] }
vecmath = "1.0.0"
num_cpus = "1.16.0"
